--- a/Assembly-CSharp.Player.csproj
+++ b/Assembly-CSharp.Player.csproj
@@ -850,6 +850,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ConsoleOut.cs" />
     <Compile Include="Assets\Scripts\ImageCapture.cs" />
     <Compile Include="Assets\Scripts\ResultsLabel.cs" />
     <Compile Include="Assets\Scripts\VisionManager.cs" />
