--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\ConsoleOut.cs" />
     <Compile Include="Assets\Scripts\ImageCapture.cs" />
     <Compile Include="Assets\Scripts\ResultsLabel.cs" />
     <Compile Include="Assets\Scripts\VisionManager.cs" />
